@@ -3,8 +3,8 @@
 #ifndef __SDC51_ASM_MCS51_FEATURES_H
 #define __SDC51_ASM_MCS51_FEATURES_H   1
 
-#define _REENTRANT	reentrant
-#define _CODE		code
+#define _REENTRANT	__reentrant
+#define _CODE		__code
 
 /* define _AUTOMEM to indicate the default storage class for
    automatic variables. To be used with pointers to automatic variables.
@@ -18,16 +18,16 @@
 */
 #if defined(SDCC_STACK_AUTO)
   #if defined(SDCC_USE_XSTACK)
-    #define _AUTOMEM pdata
+    #define _AUTOMEM __pdata
   #else
-    #define _AUTOMEM idata
+    #define _AUTOMEM __idata
   #endif
 #elif defined(SDCC_MODEL_SMALL)
-  #define _AUTOMEM data
+  #define _AUTOMEM __data
 #elif defined(SDCC_MODEL_MEDIUM)
-  #define _AUTOMEM pdata
+  #define _AUTOMEM __pdata
 #else
-  #define _AUTOMEM xdata
+  #define _AUTOMEM __xdata
 #endif
 
 /* define _STATMEM to indicate the default storage class for
@@ -40,11 +40,11 @@
    }
 */
 #if defined(SDCC_MODEL_SMALL)
-  #define _STATMEM data
+  #define _STATMEM __data
 #elif defined(SDCC_MODEL_MEDIUM)
-  #define _STATMEM pdata
+  #define _STATMEM __pdata
 #else
-  #define _STATMEM xdata
+  #define _STATMEM __xdata
 #endif
 
 #endif
