@@ -36,10 +36,10 @@ void free (void * ptr);
 
 #else
 
-extern void init_dynamic_memory(void xdata * heap, unsigned int size);
-extern void xdata * calloc (size_t nmemb, size_t size);
-extern void xdata * malloc (size_t size);
-extern void xdata * realloc (void * ptr, size_t size);
+extern void init_dynamic_memory(void __xdata * heap, unsigned int size);
+extern void __xdata * calloc (size_t nmemb, size_t size);
+extern void __xdata * malloc (size_t size);
+extern void __xdata * realloc (void * ptr, size_t size);
 extern void free (void * ptr);
 
 #endif
